--- a/src/templates/cart.contents.liquid
+++ b/src/templates/cart.contents.liquid
@@ -105,4 +105,10 @@
       CHECK OUT
     </a>
   </div>
+{% else %}
+  <div class="line-item__footer">
+    <div class="line-item__footer-text">
+      Your cart is currently empty.
+    </div>
+  </div>
 {% endif %}
