refactor: collection files

--- a/src/styles/templates/collection/index.scss
+++ b/src/styles/templates/collection/index.scss
@@ -1,7 +1,7 @@
 // Helpers
 @import '../../helpers/index';
 
-@import '../../components/select';
+@import '../../vendor/custom-select';
 @import '../../components/collection-page';
 @import '../../components/collection-sort';
 @import '../../components/collection-filters';
